[package]
name = "boc-rs"
version = "0.1.0"
authors = ["LiJia <lijia@aifantai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
time="0.3"
bytes="1"

[target.'cfg(target_os = "linux")'.dependencies]
pprof = { version = "0.8", features = ["flamegraph"] }